# small-program

Rust_training/opencvrs/: Cargo.toml
Rust_training/opencvrs/src/: main.rs
c_training/hash_c/: t.c  t.h
c_training/linklist/: explain.txt  m.c  main.c  makefile  t.c  t.h
c_training/pass2d_dynamic_arr/: t.c
c_training/sort_c/: t.c
cpp_training/SchwarzCounter/: s.cc  s.h  t.cc
cpp_training/move_and_rerurn_ref/: t.cc
cpp_training/pfwd_ovl/: t.cc  t1.cc  t3.cc
cpp_training/policy-base-pattern/: t.cc
cpp_training/template_and_makefile/: CMakeLists.txt  Makefile  main.cc  tmp.cc  tmp.h
cpp_training/template_inh/: t.cc
cpp_training/trait_class/: t.cc
doxygen-test/: readme.md
doxygen-test/doc/: Doxyfile
doxygen-test/src/: t.c  t.h
opencv_dll_cmake/: .gitignore  readme.md
opencv_dll_cmake/src/: CMakeLists.txt
opencv_dll_cmake/src/CMakeModulesForDol/ConfigDependencies/: dolConfigDependencyOpencv.cmake
opencv_dll_cmake/src/CMakeModulesForDol/functions/: dolChkBuildEnv.cmake
opencv_dll_cmake/src/opencv_lib/: CMakeLists.txt  opencv_lib.cc
opencv_dll_cmake/src/opencv_lib/include/: opencv_lib.hpp  opencv_lib_CAPI.h
opencv_dll_cmake/src/opencv_use/: CMakeLists.txt  opencv_use.cc
opencv_dll_cmake/src/opencv_use_CAPI/: CMakeLists.txt  opencv_use_CAPI.c
opencv_opencl_makefile_mingw/src/: CMakeLists.txt  Makefile  test.cc
python_training/: plot_bold.py
python_training/hough/: hough-curve-spce-2D-1r.py  hough-line-space-2D.py
vcpkg-cmake-qml/: CMakeLists.txt  README.md
vcpkg-cmake-qml/src/: main.qml
